tests/baselines/reference/declarationFilesWithTypeReferences2.errors.txt
/app.ts(1,1): error TS18055: Declaration file contains synthesized type reference directives: '"node"'


==== /node_modules/@types/node/index.d.ts (0 errors) ====
    interface Error2 {
        stack2: string;
    }
    
==== /app.ts (1 errors) ====
    function foo(): Error2 {
    ~~~~~~~~
!!! error TS18055: Declaration file contains synthesized type reference directives: '"node"'
        return undefined;
    }